--- a/Spring-Security-P01/src/main/resources/application.properties
+++ b/Spring-Security-P01/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Spring-Security-P01
 
-spring.security.user.name=admin
-spring.security.user.password=admin123
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
+
