--- a/Spring-Security-Practice01/src/main/resources/application.properties
+++ b/Spring-Security-Practice01/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.application.name=Spring-Security-Practice01
 #2. Maintenance Challenge: What if i want multiple use user not just one user, then it will be difficult to manage multiple credentials in this way.
 #spring.security.user.name=admin
 #spring.security.user.password=admin
+
+spring.datasource.url=jdbc:mysql://localhost:3306/security_db
+spring.datasource.username=root
+spring.datasource.password=Himanshu
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
